Bug 1010221 - Let CacheFileInputStream::ReadSegments loop over all preloaded chunks, r=michal